src/objects/product_comparison_Heroku_Postgres_C__dlm/product_comparison_Heroku_Postgres_C__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>true</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>product_comparison Heroku Postgres Compe</labelOverride>
        <masterLabel>product_comparison Heroku Postgres Compe</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Profile</objectCategory>
    </mktDataModelAttributes>
</CustomObject>