src/objects/product_comparison_Heroku_Postgres_C__dlm/fields/ai_enabled__c.field-meta.xml
<CustomField>
    <fullName>ai_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ai_enabled</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>ai_enabled</labelOverride>
        <masterLabel>ai_enabled</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>