src/objects/product_comparison_Heroku_Postgres_C__dlm/fields/competitor_price__c.field-meta.xml
<CustomField>
    <fullName>competitor_price__c</fullName>
    <label>competitor_price</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>competitor_price</labelOverride>
        <masterLabel>competitor_price</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>