src/objects/product_comparison_Heroku_Postgres_C__dlm/fields/license_period_months__c.field-meta.xml
<CustomField>
    <fullName>license_period_months__c</fullName>
    <label>license_period_months</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>license_period_months</labelOverride>
        <masterLabel>license_period_months</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>