src/objects/product_comparison_Heroku_Postgres_C__dlm/fields/no_of_users__c.field-meta.xml
<CustomField>
    <fullName>no_of_users__c</fullName>
    <label>no_of_users</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>no_of_users</labelOverride>
        <masterLabel>no_of_users</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>