src/objects/product_comparison_Heroku_Postgres_C__dlm/fields/product_code__c.field-meta.xml
<CustomField>
    <fullName>product_code__c</fullName>
    <label>product_code</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>product_code</labelOverride>
        <masterLabel>product_code</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>