src/objects/product_comparison_Heroku_Postgres_C__dlm/fields/product_name__c.field-meta.xml
<CustomField>
    <fullName>product_name__c</fullName>
    <label>product_name</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>product_name</labelOverride>
        <masterLabel>product_name</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>