src/objects/product_comparison_Heroku_Postgres_C__dlm/fields/support_type__c.field-meta.xml
<CustomField>
    <fullName>support_type__c</fullName>
    <label>support_type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>support_type</labelOverride>
        <masterLabel>support_type</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>