src/objects/product_comparison_Heroku_Postgres_C__dlm/fields/supported_devices__c.field-meta.xml
<CustomField>
    <fullName>supported_devices__c</fullName>
    <label>supported_devices</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>supported_devices</labelOverride>
        <masterLabel>supported_devices</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>